# bash-completion

./: CHANGELOG.md  README.md  bash_completion
.github/workflows/: ci.yaml
bash_completion.d/: 000_bash_completion_compat.bash
completions/: _adb  _chsh  _mock  _mount.linux  _slackpkg  _udevadm  _umount.linux  _yum  ant  apt-build  apt-cache  apt-get  apt-mark  aptitude  arch  avahi-browse  bts  carton  ccache  cd  cfrun  chgrp  chown  chronyc  dmypy  find  gdb  getent  htpasswd  info  inotifywait  interdiff  ip  ipmitool  jarsigner  java  jq  koji  ktutil  lilo  (+38 more)
completions-core/: alias.bash  crontab.bash  declare.bash  ebtables.bash  fio.bash  geoiplookup.bash  inotifywait.bash  iptables.bash  nc.bash  nslookup.bash  ping.bash  rpm.bash  ssh-keygen.bash  ssh-keyscan.bash  ssh.bash  tmux.bash  tracepath.bash  tree.bash  update-rc.d.bash  wget.bash  wtf.bash  zopflipng.bash
completions-fallback/: secret-tool.bash  tox.bash
test/config/: bashrc
test/t/: Makefile.am  test_alias.py  test_gdb.py  test_ip.py  test_who.py  test_xfreerdp.py
test/t/unit/: Makefile.am  test_unit_compgen.py  test_unit_compgen_filedir_xspec.py  test_unit_load_completion.py
